<?xml version="1.0"?>
<package format="2">
  <name>aruco_pose</name>
  <version>1.0.0</version>
  <description>Positioning with ArUco markers</description>

  <maintainer email="lgh5054v@intosky.co.kr">Lee YoungJae</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rostest</depend>
  <depend>dynamic_reconfigure</depend>

  <test_depend>image_publisher</test_depend>
  <test_depend>ros_pytest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
